FIX Penulisan Master Metode Pembayaran
