# app/Http/Requests/UpdateMasterPaymentMethodRequest.php
@@ -1,11 +1,11 @@
 <?php
 
-namespace App\Http\Requests\API;
+namespace App\Http\Requests;
 
-use App\Models\master_payment_method;
-use InfyOm\Generator\Request\APIRequest;
+use Illuminate\Foundation\Http\FormRequest;
+use App\Models\MasterPaymentMethod;
 
-class Updatemaster_payment_methodAPIRequest extends APIRequest
+class UpdateMasterPaymentMethodRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -24,7 +24,7 @@ class Updatemaster_payment_methodAPIRequest extends APIRequest
      */
     public function rules()
     {
-        $rules = master_payment_method::$rules;
+        $rules = MasterPaymentMethod::$rules;
         
         return $rules;
     }
